--- a/SiteLanches/Views/Lanche/List.cshtml
+++ b/SiteLanches/Views/Lanche/List.cshtml
@@ -1,25 +1,31 @@
-﻿@model IEnumerable<SiteLanches.Models.Lanche>
-
+﻿@model LanchesListViewModel
 @{
     ViewData["Title"] = "List";
-    
+
 }
 
 <h1>Lanches</h1>
-<div></div><h1>@ViewData["Titulo"]</h1></div>
+<div> <h1>@Model.CategoriaAtual</h1></div>
+<h1>@ViewData["Titulo"]</h1>
 
 <h2>@ViewData["Data"]</h2>
 <hr />
 <h6>@ViewBag.Total @ViewBag.TotalLanches</h6>
 <hr />
 <hr />
+<div class="container"> 
+<div class="row"> 
+@foreach (var lanche in Model.Lanches)
+{
+    <div class="col-sm-4 col-md-4 col-lg-4 ">
+        <p><img src="@lanche.ImagemUrl" class=" = "img-fluid"></p>
+        <h4>@lanche.Nome</h4>
+        <h3>Preço: @lanche.Preco.ToString("c")</h3>
+        <h5>@lanche.DescricaoCurta</h5>
+        
 
-@foreach (var lanche in Model) {
-        <div>
-           <h4>@lanche.Nome</h4>
-           <p><img src="@lanche.ImagemUrl" /></p>
-           <h3>Preço: @lanche.Preco.ToString("c")</h3>
-        </div>
+    </div>
 }
- 
+</div>
+</div>
 
