--- a/SiteLanches/Views/_ViewImports.cshtml
+++ b/SiteLanches/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SiteLanches
 @using SiteLanches.Models
+@using SiteLanches.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
