--- a/SiteLanches/Views/CarrinhoCompra/Index.cshtml
+++ b/SiteLanches/Views/CarrinhoCompra/Index.cshtml
@@ -34,7 +34,7 @@
                        </td>
 
                        <td class="text-center">
-                         <a asp-controller="CarrinhoCompra" asp-action="RemoverItemDoCarrinhoCompra" 
+                         <a asp-controller="CarrinhoCompra" asp-action="RemoverItemDoCarrinho" 
                           asp-route-lancheId="@item.Lanche.LancheId"><img src="~/images/saquinhoLixo.jpg" width="10px" height="10px" />
                          </a>
                       </td>
