--- a/SiteLanches/Views/_ViewImports.cshtml
+++ b/SiteLanches/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using SiteLanches.ViewModels
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper SiteLanches.TagHelpers.*, SiteLanches
