--- a/SiteLanches/Views/Shared/_LanchesResumo.cshtml
+++ b/SiteLanches/Views/Shared/_LanchesResumo.cshtml
@@ -2,13 +2,29 @@
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
 
+
+
+
 @model Lanche
-<div class="col-sm-4 col-md-4 col-lg-4 ">
 
-
-    <h4>@Model.Nome</h4>
-    <p><img src="@Model.ImagemUrl"></p>
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <p><img src="@Model.ImagemUrl" class="img-fluid"></p>
     <h3>Preço : @Model.Preco.ToString("c")</h3>
 
-</div>
+    <h4>
+        <a asp-controller="Lanche" asp-action="Details"
+           asp-route-lancheId="@Model.LancheId">@Model.Nome</a>
+    </h4>
 
+    <p>@Model.DescricaoCurta</p>
+    <div>
+        <p class="button">
+            <a class="btn btn-primary" id="cartButton" asp-controller="CarrinhoCompra"
+               asp-action="AdiconarItemNoCarrinho" asp-route-lancheId="@Model.LancheId">
+                Adicionar ao carrinho
+            </a>
+
+        </p>
+    </div>
+
+</div>
