--- a/SiteLanches/Views/Account/Register.cshtml
+++ b/SiteLanches/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 
 <table class="table">
     <tr>
-        <td><img src="~/images/registro1.jpg" alt="Registrar Usuário"  /></td>
+        <td><img src="~/images/registerNow.jpg" alt="Registrar Usuário"  /></td>
         <td>
             <div class="row">
                  <div class="col-10 col-md-10 col-lg-10">
