Capitulo9 da pra melhorar afu essa parte das imagens, na que as outras tb estejam perfeitas

--- a/SiteLanches/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SiteLanches/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
                         <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminCategorias" asp-action="Index">Categorias</a>
                         <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminPedidos" asp-action="Index">Pedidos</a>
                         <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminRelatorioVenda" asp-action="Index">Relatório de Vendas</a>
+                        <a class="nav-link text-dark" asp-area="Admin" asp-controller="AdminImages" asp-action="Index">Gerenciar Imagens</a>
                   
 
                     </ul>
