--- a/SiteLanches/Areas/Admin/Views/_ViewImports.cshtml
+++ b/SiteLanches/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,6 +2,8 @@
 @using SiteLanches.Models
 @using SiteLanches.ViewModels
 @using ReflectionIT.Mvc.Paging
+@using System.IO
+
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper SiteLanches.TagHelpers.*, SiteLanches
